Changes from 4.3.26 -> 4.3.27 (XX Mar 2016)
===========================================

* rev ####

* Don't treat empty (0 byte) directory size as invalid 
  (Reported by Bert Willekens)
* Fix looping redirect on criticaleditor.sh
* Allow NK-critical acknowledgements from status pages
* Fix redirect to criticalview.sh, which is just a
  regular CGI


Changes from 4.3.25 -> 4.3.26 (19 Feb 2016)
===========================================

* rev 7906

* Fix javascript failures on info/trends pages caused by CSP fixes
* Fix incorrect HTTP refresh on rejected enadis.sh POSTs
* Do not auto-refresh info or trends svcstatus pages
* Revert default svcstatus page refresh interval from 30s back to 60s
* Re-introduce XYMWEBREFRESH variable to control refresh interval
* HTML encode most fields on info page
* Restrict characters allowed for hostnames and testnames
* HTML encode error log output on xymond/net/gen pages
* HTML encode ghost hostnames output on xymond/ghostlist pages
* logfetch: only evaluate the first config of a given type seen for 
  the same file name
* xymongen/reports: fix vague error message around missing history files
  and properly exclude clientlog statuses (Reported by Magdi Mahmoud)
* Ensure configured CLASS overrides in hosts.cfg are always passed on 
  to client workers, regardless of 'class' for that specific message
  (Reported by Steve Hill)

Changes from 4.3.24 -> 4.3.25 (05 Feb 2016)
===========================================

* rev 7890

* Resolve buffer overflow when handling "config" file requests (CVE-2016-2054)
* Restrict "config" files to regular files inside the $XYMONHOME/etc/ directory
  (symlinks disallowed) (CVE-2016-2055). Also, require that the initial filename
  end in '.cfg' by default
* Resolve shell command injection vulnerability in useradm and chpasswd CGIs
  (CVE-2016-2056)
* Tighten permissions on the xymond BFQ used for message submission to restrict
  access to the xymon user and group. It is now 0620. (CVE-2016-2057)