@@ -9,6 +9,8 @@ Changes from 4.3.26 -> 4.3.27 (XX Mar 2016)
 * Allow NK-critical acknowledgements from status pages
 * Fix redirect to criticalview.sh, which is just a
   regular CGI
+* Properly recognize https URLs as summary links (Thanks, 
+  David Steinn Geirsson)
 
 
 Changes from 4.3.25 -> 4.3.26 (19 Feb 2016)
